changed nav-bar layout

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="nav-area">
         <div class='nav-bar container'>
             <nav class="the-nav clearfix">
-                <ul class="nav pull-left top-first">
+                <ul class="nav pull-left">
                     <li class="search-container tooltip">
                         <i class="material-icons md-dark">search</i>
                         <input id="motif-search" placeholder="Start typing motif name here ..."
@@ -265,13 +265,15 @@
                         <span>MoLoTool</span>
                     </li>
                 </ul>
-                <ul class="nav pull-right top-second">
-                    <a id="change-mode-button" class="interface-button" href="#"></a>
-                    <a id="open-table-button" class="interface-button" href="#"></a>
-                    <a id="clear-button" class="interface-button" href="#"></a>
-                    <a id="demo-button" class="interface-button" href="#"></a>
-                    <a id="tutorial-button" class="interface-button" href="#"></a>
-                    <a id="help-button" class="interface-button" href="#"></a>
+                <ul class="nav pull-right">
+                    <div class="right-container">
+                        <a id="demo-button" class="interface-button" href="#"></a>
+                        <a id="tutorial-button" class="interface-button" href="#"></a>
+                        <a id="help-button" class="interface-button" href="#"></a>
+                        <a id="change-mode-button" class="interface-button second-line" href="#"></a>
+                        <a id="open-table-button" class="interface-button second-line" href="#"></a>
+                        <a id="clear-button" class="interface-button second-line" href="#"></a>
+                    </div>
                 </ul>
             </nav>
         </div>
