- q2tip now hides title(MoLoTool) when shows errors - refactoring - topNav styling

--- a/index.html
+++ b/index.html
@@ -266,14 +266,14 @@
                     </li>
                 </ul>
                 <ul class="nav pull-right">
-                    <div class="right-container">
+                    <li class="right-container">
+                        <a id="change-mode-button" class="interface-button" href="#"></a>
+                        <a id="open-table-button" class="interface-button" href="#"></a>
+                        <a id="clear-button" class="interface-button" href="#"></a>
                         <a id="demo-button" class="interface-button" href="#"></a>
                         <a id="tutorial-button" class="interface-button" href="#"></a>
                         <a id="help-button" class="interface-button" href="#"></a>
-                        <a id="change-mode-button" class="interface-button second-line" href="#"></a>
-                        <a id="open-table-button" class="interface-button second-line" href="#"></a>
-                        <a id="clear-button" class="interface-button second-line" href="#"></a>
-                    </div>
+                    </li>
                 </ul>
             </nav>
         </div>
