- topNav styling for a screen resize

--- a/index.html
+++ b/index.html
@@ -266,10 +266,12 @@
                     </li>
                 </ul>
                 <ul class="nav pull-right">
-                    <li class="right-container">
+                    <li class="first-line">
                         <a id="change-mode-button" class="interface-button" href="#"></a>
                         <a id="open-table-button" class="interface-button" href="#"></a>
                         <a id="clear-button" class="interface-button" href="#"></a>
+                    </li>
+                    <li class="second-line">
                         <a id="demo-button" class="interface-button" href="#"></a>
                         <a id="tutorial-button" class="interface-button" href="#"></a>
                         <a id="help-button" class="interface-button" href="#"></a>
