- topNav refactored - uiButtons.js refactored

--- a/index.html
+++ b/index.html
@@ -253,18 +253,24 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="collection-settings">
-                            <a id="collection-settings-button" class="interface-button" href="#"></a>
-                        </div>
                     </li>
-                </ul>
 
-                <ul>
                     <li class="title-container">
                         <span>MoLoTool</span>
                     </li>
+                    <li class="collection-settings">
+                        <a id="collection-settings-button" class="interface-button" href="#"></a>
+                    </li>
                 </ul>
+
+                <!--<ul>-->
+                    <!--<li class="title-container">-->
+                        <!--<span>MoLoTool</span>-->
+                    <!--</li>-->
+                    <!--<div class="collection-settings">-->
+                        <!--<a id="collection-settings-button" class="interface-button" href="#"></a>-->
+                    <!--</div>-->
+                <!--</ul>-->
                 <ul class="nav pull-right">
                     <li class="first-line">
                         <a id="change-mode-button" class="interface-button" href="#"></a>
