- topNav refactored - inputErrors refactored - uploadFile-button fixed

--- a/index.html
+++ b/index.html
@@ -258,19 +258,11 @@
                     <li class="title-container">
                         <span>MoLoTool</span>
                     </li>
+
                     <li class="collection-settings">
                         <a id="collection-settings-button" class="interface-button" href="#"></a>
                     </li>
                 </ul>
-
-                <!--<ul>-->
-                    <!--<li class="title-container">-->
-                        <!--<span>MoLoTool</span>-->
-                    <!--</li>-->
-                    <!--<div class="collection-settings">-->
-                        <!--<a id="collection-settings-button" class="interface-button" href="#"></a>-->
-                    <!--</div>-->
-                <!--</ul>-->
                 <ul class="nav pull-right">
                     <li class="first-line">
                         <a id="change-mode-button" class="interface-button" href="#"></a>
@@ -587,7 +579,7 @@
                     <a class="interface-button upload-button" href="#">
                         <label class="custom-file-upload">
                             <input type="file" id="fileInput">
-                            Upload file
+                            <span>Upload file</span>
                             <i class="material-icons md-dark">file_upload</i>
                         </label>
                     </a>
