--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
                         </div>
                     </li>
 
-                    <li class="title-container">
-                        <span>MoLoTool</span>
-                    </li>
+                    <!--<li class="title-container">-->
+                        <!--<span>MoLoTool: Collections</span>-->
+                    <!--</li>-->
 
                     <li class="collection-settings">
                         <a id="collection-settings-button" class="interface-button" href="#"></a>
