--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         </div>
         <div>
             <div class="help-header">
-                <a target="_blank" href="https://hocomoco.autosome.ru/help">
+                <a target="_blank" href="https://hocomoco.autosome.org/help">
                     HOCOMOCO
                 </a>
             </div>
@@ -325,7 +325,7 @@
         </div>
         <div>
             <div class="help-header">
-                <a target="_blank" href="https://hocomoco.autosome.ru/help">
+                <a target="_blank" href="https://hocomoco.autosome.org/help">
                     Support
                     <a target="_blank" href="https://github.com/EugeneRumynskiy/RumHocomoco_2.0">
                         <img src="github.svg" alt="github" style="width: 20px; vertical-align: -1px;">
@@ -386,7 +386,7 @@
                 <p>
                     First, add binding models from HOCOMOCO to the models list.
                     To perform this step, start browsing models by typing TF
-                    <a target="_blank" href="https://hocomoco.autosome.ru/human/mono">name or family</a>
+                    <a target="_blank" href="https://hocomoco.autosome.org/human/mono">name or family</a>
                     in the search field
                     (<img class="img-example" src="helpImages/Search/SearchField.png" alt="SearchField.png">).
                     Click on a
@@ -401,8 +401,8 @@
                     <span class="italic bold">Note</span>
                     that chosen Motif ID
                     <!--(<img class="img-example" src="helpImages/Search/MotifIDSelected.png" alt="MotifIDSelected.png"
-                          href="https://hocomoco11.autosome.ru/motif/COE1_HUMAN.H11MO.0.A">)-->
-                    <a href="https://hocomoco11.autosome.ru/motif/COE1_HUMAN.H11MO.0.A" class="hocomoco-info" target="_blank">COE1_HUMAN.H11MO.0.A</a>
+                          href="https://hocomoco11.autosome.org/motif/COE1_HUMAN.H11MO.0.A">)-->
+                    <a href="https://hocomoco11.autosome.org/motif/COE1_HUMAN.H11MO.0.A" class="hocomoco-info" target="_blank">COE1_HUMAN.H11MO.0.A</a>
                     contains a
                     <span class="italic bold">Hyperlink</span>
                     to the HOCOMOCO database.
